@@ -6,6 +6,13 @@
 
 ********************************************************************************
 
+  February, 16 2017, 14:10
+  deviceServiceVersion = 1013379
+	
+  [-] Fixed error with parameter FSPrintTags
+  
+********************************************************************************
+
   February, 16 2017, 12:30
   deviceServiceVersion = 1013378
 	
